--- a/index.html
+++ b/index.html
@@ -81,10 +81,6 @@
         </div>
       </div>
     </section>
-
-
-
-
     <section id="section3">
       <div class="container1">
         <h1>Start working smarter</h1>
@@ -99,9 +95,41 @@
         </div>
       </div>
     </section>
-
-
-
-
+    <section id="section4">
+      <div class="container">
+        <img src="./ddd.jpg" alt="">
+        <div class="small">
+          <h1>
+            We maximize <br />
+            added value for <br />
+            our clients
+          </h1>
+          <p>
+            Urna duis convallis convallis tellus id interdum velit laoreet.
+            <br />
+            Odio pellentesque diam volutpat commodo sed egestas egestas <br />
+            fringilla. Nunc eget lorem dolor sed viverra ipsum nunc aliquet.
+          </p>
+          <span>Images from FreePIK</span>
+          <button>learn more</button>
+        </div>
+        
+        <div id="lower1">
+          <div style="background-position: 50px;" class="circle">
+            <img src="./download.png" alt="">
+          </div>
+          <div style="background-position: 50px;" class="circle">
+            <img src="./download (1).png" alt="">
+          </div>
+          <div style="background-position: 50px;" class="circle">
+            <img src="./download (2).png" alt="">
+          </div>
+          <div style="background-position: 50px;" class="circle">
+            <img src="./download (3).png" alt="">
+          </div>
+          
+        </div>
+      </div>
+    </section>
   </body>
 </html>
