--- a/index.html
+++ b/index.html
@@ -236,7 +236,8 @@
           <div class="leftBoxs">
           <div class="box1" style="background-image:url(./dftg.jpg);">
             <h2>Consulting, <br>
-              Solution & Service</h2>
+             Solution & Service</h2>
+  
           </div>
            <div class="box3">
             <div id="left" style="background-image: url(./asd.jpg);"></div>
@@ -261,9 +262,92 @@
           </div>
           <div class="box4" style="background-image: url(./esg.jpg);"></div>
         </div>
-
         </div>
       </div>
+                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 160 160">
+       <path
+        fill="currentColor"
+       d="M10.3,39.9c-18.2,24.9-9.2,62.5,4,87.4c8.2,15.4,23,36.1,48.6,32.2c5.8-0.9,11.1-3.2,16.9-4.3c17.8-3.4,37.9,4.7,54.5-1.5
+       c6.6-2.5,11.6-6.9,15.5-11.8c12.2-15.3,13.7-35.6,3.8-51.9c-6.9-11.5-19-20.9-23.6-33.1c-4.5-11.9-1.4-24.9-4.7-37.1
+       C121.1,5,103.7-5.6,85.7,3.1c-6.8,3.3-12.6,7.7-20,10.2C58,15.9,49.5,16.6,41.6,19C26.8,23.6,16.7,31,10.3,39.9z"
+       />
+     </svg>
     </section>
+    <section id="section6">
+      <div class="upper">
+        <div class="managerImage">
+          <img src="./manager-woman-leading-4-min.jpg"alt="">
+        </div>
+          <div id="small-container">
+            <h1>Our Creative Team</h1>
+            <p>Lorem ipsum dolor sit amet, <br>
+              consectetur adipiscing elit nullam nunc justo sagittis suscipit ultrices. <br>
+               Excepteur sint occaecat cupidatat non proident,<br>
+               sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+               <span>Image from <a>FreePIK</a></span>
+               <button>Learn More</button>
+          </div>
+      </div>
+      <div class="middle">
+        <h1>Brilliant people and effective methods</h1>
+        <div id="mainImg">
+            <img src="./vbvbvbvb.jpg" alt="">
+            <div class="boxs">
+                <div class="box1">
+                    <h6 id="box1-h6">AWARDS WON</h6>
+                    <h1 id="box1-h1">10</h1>
+                </div>
+                <div class="box2">
+                    <h6 id="box2-h6">XP YEARS</h6>
+                    <h1 id="box2-h1">12+</h1>
+                </div>
+                <div class="box3">
+                    <h6 id="box3-h6">CLIENTS</h6>
+                    <h1 id="box3-h1">10k</h1>
+                </div>
+                <div class="box4">
+                    <h6 id="box4-h6">PROJECTS</h6>
+                    <h1 id="box4-h1">78+</h1>
+                </div>
+            </div>
+            <span>Image from FREEPIK</span>
+        </div>
+    </div>
+    <div class="lowerContainer">
+        <div class="leftContainer">
+            <h1 id="lower-h1">Get in touch</h1>
+            <h3 id="lower-h3">WE BELIEVE IN INNOVATION AND <br>
+                CREATIVE PROBLEM <br>
+                SOLVING.</h3>
+            <p id="lower-p">Etiam sit amet convallis erat – class <br>
+                aptent taciti sociosqu ad <br>
+                litora torquent per conubia! Maecenas gravida lacus. <br>
+                Lorem etiam sit amet convallis erat.</p>
+        </div>
+        <div class="mid-container">
+            <h6 id="mid-h6">CALL US</h6>
+            <h5 id="mid-h5">1 (234) 567-891 <br>
+                1 (234) 987-654</h5>
+            <h3 id="mid-h3-2">LOCATION</h3>
+            <h5 id="mid-h5-2">121 Rock Sreet, 21 Avenue, <br>
+                New York, NY 92103-9000</h5>
+                <h3 id="mid-h3-3">OUR TOP SERVICES</h3>
+                <ul>✔Consulting</ul>
+                <ul>✔Coaching</ul>
+                <ul>✔Development</ul>
+              </div>
+        <div class="right-container">
+            <input type="text" placeholder="Enter Your Name">
+            <input type="text" placeholder="Enter a valid email address">
+            <textarea name="" id=""></textarea>
+            <button>SUBMIT</button>
+        </div>
+    </div>
+    <footer>
+      <h6>Sample text. Click to select the Text Element.</h6>
+      <h6>This site was created with the Nicepage</h6>
+    </footer>
+     
+    </section> 
   </body>
 </html>
